--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -87,6 +87,9 @@
             %h2.probide Probide
             .clear
       .bg-footer
+        %ul
+          %li= link_to "inicio", root_path
+          %li= link_to "Sobre Patatoon", about_path
       /[if IE] 
         :erb
           </div>
