--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -89,7 +89,7 @@
       .bg-footer
         %ul
           %li= link_to "inicio", root_path
-          %li= link_to "Sobre Patatoon", about_path
+          %li= link_to "Sobre Patatoon", about_us_path
       /[if IE] 
         :erb
           </div>
