--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1558,3 +1558,29 @@ td.flag {
 #content h3 {
 	margin-bottom: 10px;
 }
+
+
+div.bg-footer ul {
+	overflow: hidden;	
+	width: 180px;
+	padding-top: 30px; 
+	display: block;
+	margin: 0px auto;
+}
+
+div.bg-footer ul li {
+	float: left;
+	margin-right: 20px;
+	font-size: 16px;
+}
+
+div.bg-footer ul li.last {
+	margin-right: 0px;
+}
+div.bg-footer ul li a {
+	color: white;
+	text-decoration: underline;
+	text-transform: lowercase;
+	font-size: 13px;
+}
+
