Updated name to comments

--- a/app/views/admin/comments/index.html.haml
+++ b/app/views/admin/comments/index.html.haml
@@ -26,7 +26,7 @@
         %td= comment.title
         %td= summary comment.content
         %td= comment.email
-        %td= comment.account.name
+        %td= comment.account.name if comment.account
         %td= date comment.created_at
         %td= link_to 'Editar', edit_admin_comment_path(comment)
         %td= link_to 'Eliminar', ["admin",comment], :confirm => '¿Estas seguro? Se borraran todos los datos relacionados', :method => :delete
