Fixed comments admin page

--- a/app/views/admin/comments/_form.html.haml
+++ b/app/views/admin/comments/_form.html.haml
@@ -3,7 +3,8 @@
     = form.input :title, :label => "Título"
     = form.input :content, :label => "Contenido"
     = form.input :email
-    = form.input :user, :label => "Autor"
+    = form.input :name
+    = form.input :account, :label => "Autor"
     = form.input :website, :label => "Sitio web"
     = form.input :commentable, :label => "Fuente"
     
