Added date to comment

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -13,3 +13,6 @@
     %p.title= (comment.account.title if comment.account)
   .content
     = strip_tags(comment.content) 
+    %strong
+      dicho en
+      = l(comment.created_at, :format=>:short)
