Added date to activity

--- a/app/views/streams/_activity.html.haml
+++ b/app/views/streams/_activity.html.haml
@@ -28,3 +28,5 @@
           = link_to "cambiado su avatar", profile_path(activity.account.profile.id)
         - else
           pasado un buen rato con sus amigos en Patatoon
+      en
+      = l(activity.created_at, :format => :short)
