--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -686,8 +686,8 @@ form#new_comment.formtastic.comment {
 }
 
 #last-predicted table tr, #last-predicted table td {
-height:34px;
-line-height:34px;
+/*height:34px;*/
+line-height:24px;
 }
 
 #last-predicted li div.meta .title {
@@ -718,7 +718,7 @@ line-height:34px;
 #last-predicted table tr,
 #last-predicted table td{
 /*  height:34px;*/
-	line-height:34px;
+	line-height:24px;
 }
 
 #last-predicted table td.first {
