Changes to mensajes

--- a/app/views/member/messages/reply.html.erb
+++ b/app/views/member/messages/reply.html.erb
@@ -1,4 +1,4 @@
-<div class="titleB"><%= link_to I18n.t("tog_mail.plugin_name"), member_messages_path %> / <%= I18n.t("tog_mail.member.reply_message") %></div>
+<div class="titleB"><%= link_to "Mensajes", member_messages_path %> / <%= I18n.t("tog_mail.member.reply_message") %></div>
 <br />
 
 <%= error_messages_for :message %>
