--- a/app/views/member/messages/show.html.erb
+++ b/app/views/member/messages/show.html.erb
@@ -25,6 +25,6 @@
 
 <div class="clear" />
 <div>
- <%= render :partial => "comments/comments_list", :locals => {:commentable => @message } %>  
+ <%= render :partial => "member/messages/comments", :locals => {:commentable => @message } %>  
 </div>
 
