Added meta to header for Fb images

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,7 +3,8 @@
 
 - content_for :meta_fb do
   %meta{:content => "Entrada: #{@post.title}", :property => "og:site_name"}/
-  %link{:rel=>"image_src" href=((@post.picture.url(:post)) if @post.picture_file_name) }
+  %meta{:content => ((@post.picture.url(:post)) if @post.picture_file_name), :property => "og:image"}/
+  %link{:rel=>"image_src" href=>((@post.picture.url(:post)) if @post.picture_file_name) }
 
 
 
