--- a/app/views/admin/friends/_form.html.haml
+++ b/app/views/admin/friends/_form.html.haml
@@ -1,5 +1,6 @@
 - semantic_form_for ["admin",@friend] do |form|
   - form.inputs do
+    = form.input :id
     = form.input :name
     = form.input :email
     
