--- a/app/views/admin/matches/index.html.haml
+++ b/app/views/admin/matches/index.html.haml
@@ -1,39 +1,39 @@
-- @title = "Administración Partidos "
+- @title = "Administración Matches "
 
 #admin.index
-  %h1= "Administrando Partidos"
+  %h1= "Administrando Matches"
 
   #admin_menu
-    = link_to "Nuevo partido", new_admin_match_path
+    = link_to "Nuevo match", new_admin_match_path
 
   %table{:id=>"matches_table"}
     %thead
       %tr
         %td Id
         %td Número
-        %td Equipo
-        %td Equipo
-        %td Goles
-        %td Goles
         %td Fecha
         %td Estadio
+        %td Equipo
+        %td Equipo
+        %td Goles
+        %td Goles
         %td Grupo
         %td Foto
-        %td # de Predicciones
-        %td 
+        %td Predicciones
+        %td
         %td
     %tbody
     - @matches.each do |match|
       %tr{:class=>cycle('even','odd') }
         %td= match.id
         %td= match.number
-        %td= link_to match.local.name, edit_admin_team_path(match.local) if match.local
-        %td= link_to match.visitor.name, edit_admin_team_path(match.visitor) if match.visitor
+        %td= l(match.played_at, :format=>:short)
+        %td= match.stadium
+        %td= match.local.name if match.local
+        %td= match.visitor.name if match.visitor
         %td= match.first_team_goals
         %td= match.second_team_goals
-        %td= l(match.played_at, :format=>:short)
-        %td= match.stadium.name
-        %td= match.group.name
+        %td= match.group
         %td= match.picture.url(:thumbnail)
         %td= match.predictions_count
         %td= link_to 'Editar', edit_admin_match_path(match)
