--- a/app/views/admin/players/index.html.haml
+++ b/app/views/admin/players/index.html.haml
@@ -1,18 +1,21 @@
-- @title = "Administración Jugadores "
+- @title = "Administración Players "
 
 #admin.index
-  %h1= "Administrando Jugadores"
+  %h1= "Administrando Players"
 
   #admin_menu
-    = link_to "Nuevo jugador", new_admin_player_path
+    = link_to "Nuevo player", new_admin_player_path
 
   %table{:id=>"players_table"}
     %thead
       %tr  
         %td Id
-        %td Nombre
-        %td País
-        %td Equipo
+        %td Name
+        %td Born_at
+        %td Country
+        %td Team
+        %td Created_at
+        %td Updated_at
         %td Bio
         %td
         %td
@@ -21,9 +24,12 @@
       %tr{:class=>cycle('even','odd') }
         %td= player.id
         %td= player.name
+        %td= player.born_at
         %td= player.country
         %td= player.team
-        %td= summary player.bio
+        %td= player.created_at
+        %td= player.updated_at
+        %td= player.bio
         %td= link_to 'Editar', edit_admin_player_path(player)
         %td= link_to 'Eliminar', ["admin",player], :confirm => '¿Estas seguro? Se borraran todos los datos relacionados', :method => :delete
       
