--- a/app/views/admin/players/new.html.haml
+++ b/app/views/admin/players/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo jugador"
+- @title = "Nuevo player"
 
 #admin
-  %h1= "Nuevo jugador"
+  %h1= "Nuevo player"
 
   = render :partial => 'form'
 
