--- a/app/views/admin/shorts/show.html.haml
+++ b/app/views/admin/shorts/show.html.haml
@@ -5,7 +5,8 @@
   %h1 "Viendo short"
 
   - show_for @short do |a| 
-    = a.attribute :name
+    = a.attribute :id
+        = a.attribute :name
     
 
   .bottom_menu
