--- a/app/views/admin/stadia/edit.html.haml
+++ b/app/views/admin/stadia/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando estadio"
+- @title = "Editando stadium"
 
 #admin
-  %h1= "Editando estadio"
+  %h1= "Editando stadium"
 
   = render :partial => 'form'
 
