--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -83,7 +83,7 @@
           .clear
           #footer
             %h2.creer Creer para Crear
-            %p Patatoon es el ganador del 5to concurso Creer para Crear
+            %img{:src=>"/images/lan.jpg", :width => "240", :height=>"120", :id=>"lan_ad"}
             %h2.probide Probide
             .clear
       .bg-footer
