--- a/app/views/admin/badges/_form.html.haml
+++ b/app/views/admin/badges/_form.html.haml
@@ -1,8 +1,9 @@
 - semantic_form_for ["admin",@badge] do |form|
   - form.inputs do
-    = form.input :name, :label => "Nombre"
-    = form.input :description, :label=>"Descripción", :input_html => {:class => "tinymce"}
-    = form.input :type, :label => "Tipo"
+    = form.input :id
+    = form.input :name
+    = form.input :description, :input_html => {:class => "tinymce"}
+    = form.input :type
     
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
