--- a/app/views/admin/badges/edit.html.haml
+++ b/app/views/admin/badges/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando medalla"
+- @title = "Editando badge"
 
 #admin
-  %h1= "Editando medalla"
+  %h1= "Editando badge"
 
   = render :partial => 'form'
 
