--- a/app/views/admin/badges/new.html.haml
+++ b/app/views/admin/badges/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo medalla"
+- @title = "Nuevo badge"
 
 #admin
-  %h1= "Nuevo medalla"
+  %h1= "Nuevo badge"
 
   = render :partial => 'form'
 
