--- a/app/views/admin/countries/_form.html.haml
+++ b/app/views/admin/countries/_form.html.haml
@@ -1,6 +1,7 @@
 - semantic_form_for ["admin",@country] do |form|
   - form.inputs do
-    = form.input :name, :label => "Nombre"
-    = form.input :iso_name, :label => "Nombre ISO"
+    = form.input :id
+    = form.input :name
+    
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
