--- a/app/views/admin/countries/edit.html.haml
+++ b/app/views/admin/countries/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando país"
+- @title = "Editando country"
 
 #admin
-  %h1= "Editando país"
+  %h1= "Editando country"
 
   = render :partial => 'form'
 
