--- a/app/views/admin/groups/edit.html.haml
+++ b/app/views/admin/groups/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando grupo"
+- @title = "Editando group"
 
 #admin
-  %h1= "Editando grupo"
+  %h1= "Editando group"
 
   = render :partial => 'form'
 
