--- a/app/views/admin/matches/new.html.haml
+++ b/app/views/admin/matches/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo partido"
+- @title = "Nuevo match"
 
 #admin
-  %h1= "Nuevo partido"
+  %h1= "Nuevo match"
 
   = render :partial => 'form'
 
