--- a/app/views/admin/places/_form.html.haml
+++ b/app/views/admin/places/_form.html.haml
@@ -1,6 +1,7 @@
 - semantic_form_for ["admin",@place] do |form|
   - form.inputs do
-    = form.input :name, :label => "Nombre"
+    = form.input :id
+    = form.input :name
     
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
