--- a/app/views/admin/players/_form.html.haml
+++ b/app/views/admin/players/_form.html.haml
@@ -1,9 +1,10 @@
 - semantic_form_for ["admin",@player] do |form|
   - form.inputs do
-    = form.input :name, :label => "Nombre"
-    = form.input :born_at, :label => "Fecha de nacimiento"
-    = form.input :country, :label => "País"
-    = form.input :team, :label => "Equipo"
+    = form.input :id
+    = form.input :name
+    = form.input :born_at
+    = form.input :country
+    = form.input :team
     = form.input :bio, :input_html => {:class => "tinymce"}
     
   - form.buttons do
