--- a/app/views/admin/players/edit.html.haml
+++ b/app/views/admin/players/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando jugador"
+- @title = "Editando player"
 
 #admin
-  %h1= "Editando jugador"
+  %h1= "Editando player"
 
   = render :partial => 'form'
 
