--- a/app/views/admin/predictions/edit.html.haml
+++ b/app/views/admin/predictions/edit.html.haml
@@ -1,7 +1,7 @@
-- @title = "Editando predicción"
+- @title = "Editando prediction"
 
 #admin
-  %h1= "Editando predicción"
+  %h1= "Editando prediction"
 
   = render :partial => 'form'
 
