--- a/app/views/admin/snickers/show.html.haml
+++ b/app/views/admin/snickers/show.html.haml
@@ -1,14 +1,15 @@
-- @title = "Viendo zapatilla"
+- @title = "Viendo snicker"
 
 #admin
 
-  %h1 "Viendo zapatilla"
+  %h1 "Viendo snicker"
 
   - show_for @snicker do |a| 
-    = a.attribute :name
+    = a.attribute :id
+        = a.attribute :name
     
 
   .bottom_menu
     = link_to "Ver todos", admin_snickers_path
-    = link_to "Editar zapatilla",  edit_admin_snicker_path(@snicker)
+    = link_to "Editar snicker",  edit_admin_snicker_path(snicker)
     = link_to "Crear otro", new_admin_snicker_path
