--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -44,9 +44,10 @@
             = link_to "o entra con <span>Facebook</span>", fb_connect_path, {:id=>"register_facebook", :class=>"fb-btn button"}
         %li.html
           .facebook
-            %h3 ¡Viaja al final de la copa Libertadores!
+          
+            %h3 ¡Viaja por el Perú y a la final de la copa Libertadores!
             %h4 Acierta en los pronósticos y gana puntos. Los que más tengan, participan en el concurso 
-            %p ¿Qué esperas? ¡Únete a Patatoon y viaja con todo pagado!
+            %p ¿Qué esperas? Tenemos 4 pasajes esperando por ti. ¡Únete a Patatoon y viaja con todo pagado!
             = link_to "Lee las reglas", rules_path, {:id=>"reules", :class=>"button"}
         / %li.img
         /   %a{:href => "#"}
