--- a/app/views/home/rules.haml
+++ b/app/views/home/rules.haml
@@ -5,6 +5,14 @@
 %h2 Reglas del Juego
 
 #rules
+
+  %p 
+    Patatoon y Lan te regalan un pasaje a cualquier parte del Peru con tan solo ser el usuario que más puntos tengas al final de 8vos y cuartos de final.
+
+  %p 
+    Tenemos 4 pasajes que estan esperando por ti, y el usuario que sea el que más puntos haya hecho al final del mundial, tendrá un pasaje a la final de la copa   
+    Libertadores,   
+
   %p 
     Para poder jugar, tienes que ser un usuario registrado. 
     = link_to "regístrate aqui",new_registration_path("account")
