Updated the iframe Facebook widget

--- a/app/views/home/_sidebar.haml
+++ b/app/views/home/_sidebar.haml
@@ -19,4 +19,4 @@
   %ul.ranking= render :partial => "home/top_times", :collection => @top_times
 
 #facebook_likebox
-  %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=240&amp;connections=20&amp;stream=false&amp;header=false&amp;height=340&amp;show-faces=true", :style => "border:none; overflow:hidden; width:240px; height:340px;"}
+  %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=240&amp;connections=20&amp;stream=false&amp;header=false&amp;height=340&amp;show-faces=true&amp;scroll=true", :style => "border:none; overflow:hidden; width:240px; height:340px;"}
