--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -42,13 +42,13 @@
             %p Acumula puntos, y gana increibles premios, junta a tus amigos y diviertete con Patatoon
             = link_to "Crea tu cuenta patatoon", new_registration_path("account"), {:id=>"register_new_user", :class=>"button"}
             = link_to "o entra con <span>Facebook</span>", fb_connect_path, {:id=>"register_facebook", :class=>"fb-btn button"}
-        %li.html
-          .facebook
-          
-            %h3 ¡Viaja por el Perú y a la final de la copa Libertadores!
-            %h4 Acierta en los pronósticos y gana puntos. Los que más tengan, participan en el concurso 
-            %p ¿Qué esperas? Tenemos 4 pasajes esperando por ti. ¡Únete a Patatoon y viaja con todo pagado!
-            = link_to "Lee las reglas", rules_path, {:id=>"reules", :class=>"button"}
-        / %li.img
-        /   %a{:href => "#"}
-        /     %img{:height => "271", :src => "images/banners/banner-2.jpg", :width => "815"}/
+        / %li.html
+        /   .facebook
+        /   
+        /     %h3 ¡Viaja por el Perú y a la final de la copa Libertadores!
+        /     %h4 Acierta en los pronósticos y gana puntos. Los que más tengan, participan en el concurso 
+        /     %p ¿Qué esperas? Tenemos 4 pasajes esperando por ti. ¡Únete a Patatoon y viaja con todo pagado!
+        /     = link_to "Lee las reglas", rules_path, {:id=>"reules", :class=>"button"}
+        %li.img
+          %a{:href =>rules_path}
+            %img{:height => "271", :src => "images/lanbanner.png", :width => "815"}/
