Updated rules text

--- a/app/views/home/rules.haml
+++ b/app/views/home/rules.haml
@@ -10,7 +10,7 @@
     Patatoon y Lan te regalan un pasaje a cualquier parte del Peru con tan solo ser el usuario que más puntos tengas al final de 8vos y cuartos de final.
 
   %p 
-    Tenemos 4 pasajes que estan esperando por ti, y el usuario que sea el que más puntos haya hecho al final del mundial, tendrá un pasaje a la final de la copa   
+    Tenemos varios pasajes que estan esperando por ti, y el usuario que sea el que más puntos haya hecho al final del mundial, tendrá un pasaje a la final de la copa   
     Libertadores,   
 
   %p 
@@ -49,6 +49,9 @@
 
   %p
     El premio es personal e instransferible.
+    
+  %p
+    El pasaje no incluye gastos de alojamiento,  ni estadia. Sólo pasaje y entrada al partido.
 
   %p 
     Patatoon se compromete no sólo en publicar los datos del ganador en su página, como tambien la entrega del premio.
