--- a/app/views/home/_next_games.html.haml
+++ b/app/views/home/_next_games.html.haml
@@ -1,17 +1,17 @@
 #nexts-games
   %h2 próximos partidos
   #counter-cont
-    #vs
-      %a{:href=>match_path(@last_match)}
-        .one
-          = flag_image(@last_match.local.flag_name,"medium","48x48")
-          = @last_match.try(:local).try(:short_name)
-        %span vs
-        .two
-          = flag_image(@last_match.visitor.flag_name, "medium","48x48")
-          = @last_match.try(:visitor).try(:short_name)
-    .counter{:rel=>@last_match.played_at }
-    
+  - if @last_match
+      #vs
+        %a{:href=>match_path(@last_match)}
+          .one
+            = flag_image(@last_match.local.flag_name,"medium","48x48")
+            = @last_match.try(:local).try(:short_name)
+          %span vs
+          .two
+            = flag_image(@last_match.visitor.flag_name, "medium","48x48")
+            = @last_match.try(:visitor).try(:short_name)
+      .counter{:rel=>@last_match.played_at }    
       / .day
       /   %span -
       /   días
