Updated with some small fixes and a new chat interface

--- a/app/views/predictions/_own_prediction.haml
+++ b/app/views/predictions/_own_prediction.haml
@@ -18,3 +18,6 @@
       %tr
         %td{:colspan=>3}
           = link_to "ver pronóstico", own_prediction
+      %td
+        %td{:colspan=>3}
+          .match_message= own_prediction.prediction_title  
