Updated with championships

--- a/app/views/admin/matches/_form.html.haml
+++ b/app/views/admin/matches/_form.html.haml
@@ -1,6 +1,7 @@
 - semantic_form_for ["admin",@match] do |form|
   - form.inputs do
     = form.input :number, :label => "Número"
+    = form.input :championship, :label => "Campeonato"
     = form.input :played_at, :label => "Fecha"
     = form.input :place, :label => "Lugar"
     = form.input :stadium, :label => "Estadio"
