New avatar uploaded

--- a/app/views/avatar/beta.html.erb
+++ b/app/views/avatar/beta.html.erb
@@ -12,7 +12,7 @@
 		'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=10,0,0,0',
 		'width', '921',
 		'height', '600',
-		'src', 'ModuleAvatarV2',
+		'src', '/ModuleAvatarV2',
 		'quality', 'high',
 		'pluginspage', 'http://www.adobe.com/go/getflashplayer',
 		'align', 'middle',
