New avatar uploaded

--- a/app/views/avatar/beta.html.erb
+++ b/app/views/avatar/beta.html.erb
@@ -12,7 +12,7 @@
 		'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=10,0,0,0',
 		'width', '921',
 		'height', '600',
-		'src', '/ModuleAvatarV2',
+		'src', 'http://patatoon.com/ModuleAvatarV2.swf',
 		'quality', 'high',
 		'pluginspage', 'http://www.adobe.com/go/getflashplayer',
 		'align', 'middle',
@@ -21,9 +21,9 @@
 		'scale', 'showall',
 		'wmode', 'window',
 		'devicefont', 'false',
-		'id', 'ModuleAvatar',
+		'id', 'ModuleAvatarV2',
 		'bgcolor', '#ffffff',
-		'name', 'ModuleAvatar',
+		'name', 'ModuleAvatarV2',
 		'menu', 'true',
 		'allowFullScreen', 'false',
 		'allowScriptAccess','sameDomain',
@@ -32,10 +32,10 @@
 		); //end AC code
 </script>
 <noscript>
-	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=10,0,0,0" width="921" height="600" id="ModuleAvatar" align="middle">
+	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=10,0,0,0" width="921" height="600" id="ModuleAvatarV2" align="middle">
 	<param name="allowScriptAccess" value="sameDomain" />
 	<param name="allowFullScreen" value="false" />
-	<param name="movie" value="/ModuleAvatarV2.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#ffffff" />	<embed src="/ModuleAvatarV2.swf" quality="high" bgcolor="#ffffff" width="921" height="600" name="ModuleAvatarV2" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" />
+	<param name="movie" value="/ModuleAvatarV2.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#ffffff" />	<embed src="http://patatoon.com/ModuleAvatarV2.swf" quality="high" bgcolor="#ffffff" width="921" height="600" name="ModuleAvatarV2" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" />
 	</object>
 </noscript>
 
